# cz-emoji

./: LICENSE  README.md  cz_emoji.py  pyproject.toml
